# lssa

./: .dockerignore  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  env.sh  rustfmt.toml
.github/: pull_request_template.md
accounts/: Cargo.toml
accounts/src/account_core/: address.rs  mod.rs
accounts/src/key_management/: ephemeral_key_holder.rs  mod.rs  secret_holders.rs
ci_scripts/: build-macos.sh  build-ubuntu.sh  deploy.sh  lint-ubuntu.sh  test-ubuntu.sh
common/: Cargo.toml
common/src/: block.rs  commitment.rs  error.rs  execution_input.rs  lib.rs  nullifier.rs  sequencer_client.rs  test_utils.rs  transaction.rs  utxo_commitment.rs
common/src/merkle_tree_public/: merkle_tree.rs  tree_leav_item.rs
common/src/rpc_primitives/: errors.rs  message.rs  mod.rs  requests.rs
common/src/sequencer_client/: json.rs  mod.rs
consensus/: Cargo.toml
core_primitives/: Cargo.toml
core_primitives/src/: transaction.rs
examples/program_deployment/: Cargo.toml  README.md
examples/program_deployment/methods/: Cargo.toml
examples/program_deployment/methods/guest/: Cargo.toml
integration_tests/: Cargo.toml
integration_tests/configs/debug/node/: node_config.json
integration_tests/configs/debug/sequencer/: sequencer_config.json
integration_tests/configs/debug/wallet/: wallet_config.json
integration_tests/configs/sequencer/: sequencer_config.json
integration_tests/configs/wallet/: wallet_config.json
integration_tests/src/: lib.rs  main.rs  test_suite_map.rs  tps_test_utils.rs
integration_tests/tests/: account.rs  amm.rs  config.rs  keys_restoration.rs  pinata.rs  program_deployment.rs  token.rs  tps.rs
integration_tests/tests/auth_transfer/: private.rs  public.rs
key_protocol/: Cargo.toml
key_protocol/src/: lib.rs
key_protocol/src/key_management/: constants_types.rs  ephemeral_key_holder.rs  mod.rs  secret_holders.rs
key_protocol/src/key_management/key_tree/: chain_index.rs  keys_private.rs  keys_public.rs  mod.rs  traits.rs
key_protocol/src/key_protocol_core/: mod.rs
mempool/: Cargo.toml
networking/: Cargo.toml
node_core/: Cargo.toml
node_core/src/: config.rs  lib.rs  main.rs  pre_start.rs
node_core/src/chain_storage/: accounts_store.rs  block_store.rs  mod.rs  public_context.rs
node_core/src/executions/: de.rs  se.rs
node_core/src/sequencer_client/: json.rs  mod.rs
node_core/src/storage/: accounts_store.rs  block_store.rs  mod.rs  public_context.rs
node_rpc/: Cargo.toml
node_rpc/src/: lib.rs  net_utils.rs  process.rs
node_rpc/src/types/: err_rpc.rs  mod.rs  rpc_structs.rs
node_runner/: Cargo.toml
node_runner/configs/debug/: node_config.json
node_runner/src/: config.rs  lib.rs  main.rs
nssa/: Cargo.toml  build.rs
nssa/core/: Cargo.toml
nssa/core/src/: account.rs  address.rs  circuit_io.rs  commitment.rs  encoding.rs  lib.rs  nullifier.rs  program.rs
nssa/core/src/account/: commitment.rs  data.rs  encoding.rs  mod.rs  nullifier.rs
nssa/core/src/encryption/: mod.rs  shared_key_derivation.rs
nssa/program_methods/: Cargo.toml
nssa/program_methods/guest/: Cargo.toml
nssa/src/: address.rs  error.rs  lib.rs  merkle_tree.rs  program.rs  public_transaction.rs  signature.rs  state.rs
nssa/src/encoding/: mod.rs  privacy_preserving_transaction.rs  program_deployment_transaction.rs  public_transaction.rs
nssa/src/merkle_tree/: mod.rs
nssa/src/privacy_preserving_transaction/: circuit.rs  message.rs  mod.rs  transaction.rs  witness_set.rs
nssa/src/program_deployment_transaction/: message.rs  mod.rs  transaction.rs
nssa/src/public_transaction/: encoding.rs  message.rs  mod.rs  transaction.rs  witness_set.rs
nssa/src/signature/: encoding.rs  mod.rs  private_key.rs  public_key.rs  signature.rs
nssa/src/tests/: mod.rs  public_transaction_tests.rs  state_tests.rs  valid_execution_tests.rs
nssa/test_program_methods/: Cargo.toml
nssa/test_program_methods/guest/: Cargo.toml
program_methods/: Cargo.toml
rpc_primitives/: Cargo.toml
sc_core/: Cargo.toml
sc_core/src/: blob_utils.rs  cryptography.rs  lib.rs  proofs_circuits.rs  public_context.rs  transaction_payloads_tools.rs  utxo_manipulator.rs
sequencer_core/: Cargo.toml
sequencer_core/src/: block_store.rs  config.rs  lib.rs  mempool_transaction.rs  transaction_mempool.rs
sequencer_core/src/sequecer_store/: accounts_store.rs
sequencer_core/src/sequencer_store/: accounts_store.rs  block_store.rs  mod.rs
sequencer_rpc/: Cargo.toml
sequencer_rpc/src/: lib.rs  net_utils.rs  process.rs
sequencer_rpc/src/types/: err_rpc.rs  rpc_structs.rs
sequencer_runner/: Cargo.toml  Dockerfile  docker-compose.yml  docker-entrypoint.sh
sequencer_runner/configs/debug/: sequencer_config.json
sequencer_runner/configs/docker/: sequencer_config.json
sequencer_runner/src/: config.rs  lib.rs  main.rs
storage/: Cargo.toml
storage/src/: block.rs  commitments_sparse_merkle_tree.rs  error.rs  lib.rs  nullifier.rs  nullifier_sparse_merkle_tree.rs  sc_db_utils.rs  transaction.rs
storage/src/merkle_tree_public/: hasher.rs  merkle_tree.rs  mod.rs
test_program_methods/: Cargo.toml
utxo/: Cargo.toml
wallet/: Cargo.toml
wallet/configs/debug/: wallet_config.json
wallet/src/: chain_storage.rs  config.rs  helperfunctions.rs  lib.rs  main.rs  pinata_interactions.rs  poller.rs  privacy_preserving_tx.rs  token_program_interactions.rs  transaction_utils.rs
wallet/src/chain_storage/: accounts_store.rs  mod.rs
wallet/src/cli/: account.rs  chain.rs  config.rs  mod.rs  native_token_transfer_program.rs  pinata_program.rs  token_program.rs
wallet/src/cli/programs/: amm.rs  mod.rs  native_token_transfer.rs  pinata.rs  token.rs
wallet/src/program_facades/: amm.rs  mod.rs  pinata.rs  token.rs
wallet/src/program_facades/native_token_transfer/: deshielded.rs  mod.rs  private.rs  public.rs  shielded.rs
wallet/src/program_interactions/: mod.rs  pinata.rs
wallet/src/token_transfers/: deshielded.rs  mod.rs  private.rs  public.rs  shielded.rs
zkvm/: Cargo.toml
zkvm/src/: lib.rs
zkvm/test_methods/: Cargo.toml
zkvm/test_methods/guest/: Cargo.toml
(+24 files in other folders)
