[workspace]
resolver = "2"
members = [
  "node_runner",
  "sequencer_runner",
  "storage",
  "accounts",
  "utxo",
  "vm",
  "networking",
  "consensus",
  "node_rpc",
  "sequencer_rpc",
  "mempool",
  "zkvm",
  "node_core",
  "sequencer_core",
  "common",
  "sc_core",
]

[workspace.dependencies]
anyhow = "1.0"
num_cpus = "1.13.1"
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = { version = "0.1.2" }
serde_json = "1.0.81"
actix = "0.13.0"
actix-cors = "0.6.1"
futures = "0.3"
actix-rt = "*"
lazy_static = "1.5.0"
env_logger = "0.10"
log = "0.4"
lru = "0.7.8"
thiserror = "1.0"
rs_merkle = "1.4"
sha2 = "0.10.8"
hex = "0.4.3"
aes-gcm = "0.10.3"
toml = "0.7.4"
secp256k1-zkp = "0.11.0"
bincode = "1.3.3"
tempfile = "3.14.0"
light-poseidon = "0.3.0"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"

rocksdb = { version = "0.21.0", default-features = false, features = [
  "snappy",
] }

[workspace.dependencies.rand]
features = ["std", "std_rng", "getrandom"]
version = "0.8.5"

[workspace.dependencies.k256]
features = ["ecdsa-core", "arithmetic", "expose-field", "serde"]
version = "0.13.4"

[workspace.dependencies.elliptic-curve]
features = ["arithmetic"]
version = "0.13.8"

[workspace.dependencies.serde]
features = ["derive"]
version = "1.0.60"

[workspace.dependencies.actix-web]
default-features = false
version = "=4.1.0"

[workspace.dependencies.clap]
features = ["derive", "env"]
version = "3.1.6"

[workspace.dependencies.tokio-retry]
version = "0.3.0"

[workspace.dependencies.reqwest]
features = ["json"]
version = "0.11.16"

[workspace.dependencies.tokio]
features = ["net", "rt-multi-thread", "sync", "fs"]
version = "1.28.2"

[workspace.dependencies.tracing]
features = ["std"]
version = "0.1.13"
