[workspace]
resolver = "3"
members = [
  "integration_tests",
  "sequencer_runner",
  "storage",
  "key_protocol",
  "sequencer_rpc",
  "mempool",
  "wallet",
  "sequencer_core",
  "common",
  "nssa",
  "integration_tests/proc_macro_test_attribute",
]

[workspace.dependencies]
anyhow = "1.0.98"
num_cpus = "1.13.1"
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = { version = "0.1.2" }
serde_json = "1.0.81"
actix = "0.13.0"
actix-cors = "0.6.1"
futures = "0.3"
actix-rt = "*"
lazy_static = "1.5.0"
env_logger = "0.10"
log = "0.4.28"
lru = "0.7.8"
thiserror = "2.0.12"
sha2 = "0.10.8"
hex = "0.4.3"
aes-gcm = "0.10.3"
toml = "0.7.4"
secp256k1-zkp = "0.11.0"
bincode = "1.3.3"
tempfile = "3.14.0"
light-poseidon = "0.3.0"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
base64 = "0.22.1"
bip39 = "2.2.0"
hmac-sha512 = "1.1.7"
chrono = "0.4.41"
borsh = "1.5.7"
base58 = "0.2.0"
itertools = "0.14.0"

rocksdb = { version = "0.21.0", default-features = false, features = [
  "snappy",
] }

[workspace.dependencies.rand]
features = ["std", "std_rng", "getrandom"]
version = "0.8.5"

[workspace.dependencies.k256]
features = ["ecdsa-core", "arithmetic", "expose-field", "serde", "pem"]
version = "0.13.3"

[workspace.dependencies.elliptic-curve]
features = ["arithmetic"]
version = "0.13.8"

[workspace.dependencies.serde]
features = ["derive"]
version = "1.0.60"

[workspace.dependencies.actix-web]
default-features = false
features = ["macros"]
version = "=4.1.0"

[workspace.dependencies.clap]
features = ["derive", "env"]
version = "4.5.42"

[workspace.dependencies.tokio-retry]
version = "0.3.0"

[workspace.dependencies.reqwest]
features = ["json"]
version = "0.11.16"

[workspace.dependencies.tokio]
features = ["net", "rt-multi-thread", "sync", "fs"]
version = "1.28.2"

[workspace.dependencies.tracing]
features = ["std"]
version = "0.1.13"
