[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
k256.workspace = true

rs_merkle.workspace = true
sha2.workspace = true
log.workspace = true
elliptic-curve.workspace = true
hex.workspace = true
nssa-core = { path = "../nssa/core", features = ["host"] }
borsh.workspace = true

[dependencies.generic-array]
version = "1.3.3"
features = ["zeroize"]

[dependencies.nssa]
path = "../nssa"
