[package]
name = "node_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
rand.workspace = true
k256.workspace = true
sha2.workspace = true
monotree.workspace = true
bincode.workspace = true
elliptic-curve.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tokio.workspace = true
tempfile.workspace = true
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", branch = "release-1.2" }
hex.workspace = true
actix-rt.workspace = true

[dependencies.sc_core]
path = "../sc_core"

[dependencies.accounts]
path = "../accounts"

[dependencies.storage]
path = "../storage"

[dependencies.utxo]
path = "../utxo"

[dependencies.zkvm]
path = "../zkvm"

[dependencies.rpc_primitives]
path = "../rpc_primitives"

[dependencies.common]
path = "../common"

[dependencies.secp256k1-zkp]
workspace = true
features = ["std", "rand-std", "rand", "serde", "global-context"]
