[package]
name = "node_rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
actix.workspace = true
actix-cors.workspace = true
futures.workspace = true

actix-web.workspace = true

[dependencies.accounts]
path = "../accounts"

[dependencies.consensus]
path = "../consensus"

[dependencies.networking]
path = "../networking"

[dependencies.storage]
path = "../storage"

[dependencies.utxo]
path = "../utxo"

[dependencies.vm]
path = "../vm"

[dependencies.zkvm]
path = "../zkvm"

[dependencies.node_core]
path = "../node_core"

[dependencies.rpc_primitives]
path = "../rpc_primitives"
