[package]
name = "nssa"
version = "0.1.0"
edition = "2024"

[dependencies]
nssa_core = { workspace = true, features = ["host"] }

thiserror.workspace = true
risc0-zkvm.workspace = true
serde.workspace = true
sha2.workspace = true
rand.workspace = true
borsh.workspace = true
hex.workspace = true
secp256k1 = "0.31.1"
risc0-binfmt = "3.0.2"
bytemuck = "1.24.0"
log.workspace = true

[build-dependencies]
risc0-build = "3.0.3"
risc0-binfmt = "3.0.2"

[dev-dependencies]
test_program_methods.workspace = true
hex-literal = "1.0.0"
env_logger.workspace = true

[features]
default = []
