[package]
name = "sc_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
rand.workspace = true
k256.workspace = true
sha2.workspace = true
bincode.workspace = true
elliptic-curve.workspace = true
hex.workspace = true
light-poseidon.workspace = true
ark-bn254.workspace = true
ark-ff.workspace = true

risc0-zkvm = { git = "https://github.com/risc0/risc0.git", branch = "release-2.0" }

[dependencies.accounts]
path = "../accounts"

[dependencies.storage]
path = "../storage"

[dependencies.utxo]
path = "../utxo"

[dependencies.common]
path = "../common"

[dependencies.secp256k1-zkp]
workspace = true
features = ["std", "rand-std", "rand", "serde", "global-context"]
