[package]
name = "sequencer_core"
version = "0.1.0"
edition = "2024"

[dependencies]
hex.workspace = true
anyhow.workspace = true
serde.workspace = true
rand.workspace = true
tempfile.workspace = true
log.workspace = true

[dependencies.storage]
path = "../storage"

[dependencies.mempool]
path = "../mempool"

[dependencies.common]
path = "../common"

[dependencies.nssa]
path = "../nssa"
