[package]
name = "sequencer_core"
version = "0.1.0"
edition = "2024"

[dependencies]
base58.workspace = true
anyhow.workspace = true
serde.workspace = true
rand.workspace = true
tempfile.workspace = true
chrono.workspace = true
log.workspace = true
nssa-core = { path = "../nssa/core", features = ["host"] }

[dependencies.storage]
path = "../storage"

[dependencies.mempool]
path = "../mempool"

[dependencies.common]
path = "../common"

[dependencies.nssa]
path = "../nssa"

[features]
default = []
testnet = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures.workspace = true
