[package]
name = "sequencer_rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
actix.workspace = true
actix-cors.workspace = true
futures.workspace = true
hex.workspace = true
tempfile.workspace = true

actix-web.workspace = true
tokio.workspace = true

[dependencies.mempool]
path = "../mempool"

[dependencies.accounts]
path = "../accounts"

[dependencies.sequencer_core]
path = "../sequencer_core"

[dependencies.storage]
path = "../storage"

[dependencies.common]
path = "../common"
