[package]
name = "sequencer_rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
log.workspace = true
serde.workspace = true
actix-cors.workspace = true
futures.workspace = true
base58.workspace = true
hex = "0.4.3"
tempfile.workspace = true
base64.workspace = true
itertools.workspace = true

actix-web.workspace = true
tokio.workspace = true
borsh.workspace = true

# TODO: Move to workspace

[dependencies.sequencer_core]
path = "../sequencer_core"

[dependencies.common]
path = "../common"

[dependencies.nssa]
path = "../nssa"

[dependencies.mempool]
path = "../mempool"
