[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
lru.workspace = true
thiserror.workspace = true

rocksdb.workspace = true
rs_merkle.workspace = true
sha2.workspace = true
monotree.workspace = true
