[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
lru.workspace = true
thiserror.workspace = true
elliptic-curve.workspace = true
hex.workspace = true

rocksdb.workspace = true
rs_merkle.workspace = true
sha2.workspace = true
monotree.workspace = true

[dependencies.secp256k1-zkp]
workspace = true
features = ["std", "rand-std", "rand", "serde", "global-context"]
