[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
tempfile.workspace = true
clap.workspace = true
nssa-core = { path = "../nssa/core" }
base64.workspace = true
bytemuck = "1.23.2"
borsh.workspace = true
hex.workspace = true
rand.workspace = true

[dependencies.key_protocol]
path = "../key_protocol"

[dependencies.nssa]
path = "../nssa"

[dependencies.common]
path = "../common"
