[package]
name = "zkvm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true

risc0-zkvm = { git="https://github.com/risc0/risc0.git", branch="release-1.1" }
test-methods = { path = "test_methods" }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]
